# goit-python-fp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  contacts_book.pkl  notes_book.pkl  pyproject.toml
data/: contacts.csv  undo_state.pkl
src/: contacts_book.pkl  context.py  controller.py  main.py  notes_book.pkl
src/common/: Field.py  Tag.py  __init__.py  input_prompts.py  tag.py
src/contacts/: ContactFields.py  ContactsBook.py  Fields.py  Records.py  __init__.py  context.py  controller.py  service.py  undo.py  validators.py
src/data/: contacts.csv  undo_state.pkl
src/decorators/: error_handler.py
src/exceptions/: EmailAlreadyOwned.py  FieldNotFound.py  InvalidDaysInput.py  NoArgsForCommand.py  NoteNotFoundError.py  PhoneAlreadyOwned.py  RecordNotFound.py  TagNotFound.py  WrongDateFormat.py  WrongEmail.py  WrongEmailValue.py  WrongFileName.py  WrongPhoneNumber.py  __init__.py
src/notes/: Note.py  Notes.py  NotesFields.py  __init__.py  controller.py  note.py  notes.py  service.py
src/output/: __init__.py  help_.py  output.py  rich_table.py  show_contact.py
src/photo/: aleks.txt  artur.txt  denis.txt  evgen.txt  nophoto.txt  sixth_section.txt
src/tests/: test_contacts.py
src/utils/: __init__.py  export_import.py  search.py
