[project]
name = "goit-python-fp"
version = "0.1.0"
description = "GoIT Python Core Final Project"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
